--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .sidebar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #f9f9f9;
+  background: #fff;
   transition: all 0.3s ease;
   width: 17%;
   padding: 0px 30px;
