--- a/app/assets/stylesheets/matches/_show.css
+++ b/app/assets/stylesheets/matches/_show.css
@@ -77,7 +77,7 @@
 .card {
   width: 500px;
   background-color: #d6d6d6;
-  padding: 5px;
+  padding: 4px;
   border-radius: 5px;
   height: 83vh;
   text-align: center;
@@ -85,6 +85,9 @@
   p {
     margin-left: 20px;
     text-align: left;
+  }
+  h2 {
+    font-size: 30px;
   }
 }
 
