--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -18,15 +18,15 @@
 .container-profile{
   width: 1110px;
   display: block;
-  background: #fff;
   overflow: hidden;
   margin: 0 auto;
   margin-left: 20%;
   padding-bottom: 3%;
-  -moz-box-shadow: 0px 5px 28px rgba(0,0,0,.2);
-  -webkit-box-shadow: 0px 5px 28px rgba(0,0,0,.2);
-  box-shadow: 0px 5px 28px rgba(0,0,0,.2);
+  -moz-box-shadow: 0px 5px 28px rgba(0,0,0,.4);
+  -webkit-box-shadow: 0px 5px 28px rgba(0,0,0,.4);
+  box-shadow: 0px 5px 28px rgba(0,0,0,.4);
   border-radius:5px;
+  background-color: #d6d6d6;
 }
 
 
@@ -37,6 +37,7 @@
   margin-top: 2%;
   margin-bottom: 2%;
 }
+
 .aside-01{
   z-index:2;
   width:40%;
@@ -51,6 +52,7 @@
   display:block;
   margin:-15% auto;
   position:relative;
+  box-shadow: 0 0 8px rgba(70,70,70,0.5);
 }
 
 .profile .image:after{
@@ -113,13 +115,15 @@
   text-align: center;
   padding: 8px;
   margin: 20px;
-  background-color: $light-gray;
+  background-color: #fff;
+  box-shadow: 0 0 8px rgba(235,235,235,0.5);
 }
 
 
 .profile-content{
   margin-left: 20px;
   margin-bottom: 20px;
+  margin-right: 5px;
 }
 
 
@@ -131,5 +135,4 @@
   z-index:1;
   width: 1110px;
   margin-left: -15px;
-
 }
