--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -5,10 +5,17 @@
       <h3>Lovify</h3>
       <h2>Find your music match</h2>
       <%= link_to 'Start matching', 'users/auth/spotify', class: "btn btn-primary" %>
+      <section>
+      <a href="#" class="scroll-down" address="true"></a>
+      </section>
+      <section class="ok">
+      </section>
     </div>
+
 
     <div class="slide show" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1483412033650-1015ddeb83d1?auto=format&fit=crop&w=1053&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');"></div>
     <div class="slide" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1511233002817-99325d7cc2d6?auto=format&fit=crop&w=1050&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D');"></div>
     <div class="slide" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.pexels.com/photos/374703/pexels-photo-374703.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb');"></div>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </div>
 
