--- a/app/assets/stylesheets/matches/_show.css
+++ b/app/assets/stylesheets/matches/_show.css
@@ -101,7 +101,9 @@
 }
 
 .profile-picture {
+  object-fit: cover;
   width: 300px;
+  height: 300px;
   margin: 0 auto;
   border-radius: 3px;
   box-shadow: 0 0 8px rgba(70,70,70,0.5);
