--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -26,7 +26,7 @@
     <ul class="list-unstyled">
       <li><%= link_to "Profile", "/profile", class: "sidebar-link" %></li>
         <div class="border-light"></div>
-      <li><%= link_to "Start matching", "/matches/show", class: "sidebar-link" %></li>
+      <li><%= link_to "Start matching", "/matches/#{Match.all.where(hide: false).first.id}", class: "sidebar-link" %></li>
         <div class="border-light"></div>
       <li><%= link_to "Messages", "#", class: "sidebar-link" %></li>
         <div class="border-light"></div>
