--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -4,8 +4,7 @@
 
       <div class="sidebar-logo">
         <%= link_to root_path, id: "logo-container" do %>
-          <%= image_tag "logo.png", height: 50 %>
-          <p id="logo-name">Lovify</p>
+          <%= image_tag "logo1.svg", height: 35 %>
         <% end %>
       </div>
 
